--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>QR Code Redirect</title>
-  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="src/styles/main.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
-  <script src="scripts/qr.js" defer></script>
+  <script src="src/scripts/qr.js" defer></script>
   <script src="https://kit.fontawesome.com/3ecb1b9f4b.js" crossorigin="anonymous"></script>
 </head>
 <body>
